--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-web": "^0.18.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "metro": "^0.74.1",
+    "metro-core": "^0.74.1"
   },
   "private": true
 }
