--- a/package.json
+++ b/package.json
@@ -9,11 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.3",
+    "@react-navigation/elements": "^1.3.13",
+    "@react-navigation/material-bottom-tabs": "^6.2.11",
+    "@react-navigation/native": "^6.1.2",
+    "@react-navigation/native-stack": "^6.9.8",
+    "axios": "^1.2.5",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-web": "^0.18.12"
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-paper": "^5.1.4",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-tab-view": "^3.3.4",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "^0.18.12",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
